# slic3r-python

./: .gitignore  README.md
doc.libslic3r/html/: 3_d_scene_8cpp.html  3_d_scene_8cpp__incl.map  3_d_scene_8cpp__incl.md5  3_d_scene_8hpp.html  3_d_scene_8hpp__dep__incl.map  3_d_scene_8hpp__dep__incl.md5  3_d_scene_8hpp__incl.map  3_d_scene_8hpp__incl.md5  3_d_scene_8hpp_source.html  _a_m_f_8cpp.html  _a_m_f_8cpp__incl.map  _a_m_f_8cpp__incl.md5  _about_dialog_8cpp.html  _about_dialog_8cpp__incl.map  _about_dialog_8cpp__incl.md5  _about_dialog_8hpp.html  _about_dialog_8hpp__dep__incl.map  _about_dialog_8hpp__dep__incl.md5  _about_dialog_8hpp__incl.map  _about_dialog_8hpp__incl.md5  _about_dialog_8hpp_source.html  _angle_picker_8hpp.html  _angle_picker_8hpp__dep__incl.map  _angle_picker_8hpp__dep__incl.md5  _angle_picker_8hpp__incl.map  _angle_picker_8hpp__incl.md5  _angle_picker_8hpp_source.html  _approx_tests_8cpp.html  _b_d_d_tests_8cpp.html  _b_spline_8cpp.html  _b_spline_8cpp__incl.map  _b_spline_8cpp__incl.md5  _b_spline_8h.html  _b_spline_8h__dep__incl.map  _b_spline_8h__dep__incl.md5  _b_spline_8h__incl.map  _b_spline_8h__incl.md5  _b_spline_8h_source.html  _banded_matrix_8h.html  _banded_matrix_8h__dep__incl.map  (+5739 more)
doc.libslic3r/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_18.js  (+217 more)
python_bindings/: CMakeLists.txt  config.ini  main.cpp  out.gcode  sample.py  slic3rmodule.cpp  slic3rmodule.h  slic3rpython.cpp  sussane.stl
src/: CMakeLists.txt
xs/: libslic3r.doxygen
